Updated layout, added static files.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,7 @@
-<footer class="w-100 bg-silver white pv3 f7">
-  <ul>
-    <li>
-      {% if site.author %}
-        {{ site.author | escape }}
-      {% else %}
-        {{ site.title | escape }}
-      {% endif %}
-    </li>
-    {% if site.email %}
-      <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-    {% endif %}
-  </ul>
-
+<footer class="w-100 bg-silver white pv3">
+  <p class="w-90 center lh-copy f7 tr">
+    Build {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
+    &bull;
+    Hosted on <a href="{{ site.repository_url }}" class="white link dim">GitHub</a>
+  </p>
 </footer>
