Added databases JSON files, databases template wip.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=cyrillic">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
 
+  <link rel="stylesheet" href="/static/css/databases.css">
+
   <style>
     body * { font-family: "Open Sans", sans-serif; }
     .page a { color: #982022 }
