Sort entries by name instead of shortname.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,12 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=cyrillic">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="/static/css/databases.css">
 
   <style>
-    body * { font-family: "Open Sans", sans-serif; }
+    body * { font-family: "Open Sans", sans-serif; font-size: 14px; }
     .page a { color: #982022 }
     .red-id { color: #982022 }
     .bg-red-id { background-color: #982022 }
