--- a/_includes/country_entry.html
+++ b/_includes/country_entry.html
@@ -1,6 +1,5 @@
 <h4 class="database-title">
-  {% assign db_type = site.data.databases.database_types | where: 'shortname', include.db_type %}
-  {{db_type[0].name}}:
+  {{include.db_type}}:
   <a href="{{include.url}}" target="_blank">{{include.agency}}</a>
 </h4>
 {% if include.notes %}
