--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,14 +7,20 @@
 
   <link rel="shortcut icon" href="{{ site.logo }}">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=cyrillic">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=cyrillic">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="/static/css/databases.css">
 
+
   <style>
-    body * { font-family: "Open Sans", sans-serif; font-size: 14px; }
+    body * {
+      font-family: "Open Sans", sans-serif;
+      font-size: 14px;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
     h2{ font-size: 1.75rem; }
     .page a { color: #982022 }
     .red-id { color: #982022 }
