--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header role="Navigation" class="w-100 {{page.hide_navigation}}">
+<header role="Navigation" class="w-100 bb {{page.hide_navigation}}">
 
-  <div class="w-90 center pv2 cf">
+  <div class="center pv2 ph3 cf">
     <a class="ml2 link dim mid-gray f3" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">
       <img src="{{site.logo}}" alt="OCCRP" class="h2 fl" />
       {{ site.title | escape }}
