--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,4 +15,9 @@
 
   </body>
 
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+    crossorigin="anonymous"></script>
+  <script src="/static/javascript/main.js"></script>
 </html>
