Country name fixes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       </span>
     </a>
 
-    <a class="ml3 link" href="#" title="External Databases">
+    <a class="ml3 link" href="{{ "databases" | relative_url }}" title="External Databases">
       <span class="dib v-mid ph1 pv1">
         <i class="fa fa-database"></i> External Databases
       </span>
