Added readme file, removed jquery, fixes.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,14 +38,15 @@
       margin-bottom: -1px;
       padding: 10px 15px;
     }
-    .db-nav ul li.current{
+    .db-nav ul li.current,
+    .db-nav ul li.current-db-type{
       border: 1px solid #ddd;
       border-bottom-color: transparent;
       cursor: default;
       color: #555555;
       background-color: #fff;
     }
-    .db-nav ul li:not(.current):hover{
+    .db-nav ul li:not(.current):not(.current-db-type):hover{
       color: #591314;
       background-color: #eeeeee;
     }
