--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header role="Navigation" class="cf w-100 ph3 bb b--moon-gray {{page.hide_navigation}}">
   <ul class="list ma0 pa0">
-    <li class="dib v-mid">
+    <li class="dib">
       <a class="link gray" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">
         <img src="{{site.logo}}" alt="OCCRP" class="absolute h2 pt2 top-0"/>
         <span class="f4 ml4 pl3 hover-dark-gray">{{ site.title | escape }}</span>
