--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="w-100 bg-blue-id pv1">
-  <header class="pv2 ph3">
+  <header class="pa3">
     <h2 class="white fw1">
       <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
       Databases in {{ page.country_name }}
