--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="w-100 bg-blue-id pv1">
-  <header class="ph3">
+  <header class="pa3">
     <h2 class="white fw1">
       <i class="fa fa-fw fa-database" aria-hidden="true"></i>
       {{ page.db_type_name }}
