--- a/_includes/head-tickets.html
+++ b/_includes/head-tickets.html
@@ -12,6 +12,13 @@
   <link rel="stylesheet" href="/frontend/assets/vendor.css"/>
   <link rel="stylesheet" href="/frontend/assets/id.css"/>
 
+  <meta name="id-frontend/initializers/options/rootName" content="Investigative Dashboard" />
+  <meta name="id-frontend/initializers/options/rootLogo" content="https://cdn.occrp.org/common/logo/RedTransparent_globe.png" />
+  <meta name="id-frontend/initializers/options/rootURL" content="https://investigativedashboard.org" />
+  <meta name="id-frontend/initializers/options/loginURL" content="https://investigativedashboard.org/accounts/login/" />
+  <meta name="id-frontend/initializers/options/logoutURL" content="https://investigativedashboard.org/accounts/logout/" />
+  <meta name="id-frontend/initializers/options/profileURL" content="https://investigativedashboard.org/accounts/profile/" />
+
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
