(WIP) Remake UI to match occrp/id-frontend;
* Upgrade jekyll to 3.7.* (mainly for livereload)
* Add jekyll-autoprefixer
* Be gone tachyons!
* Other stuff

TODO:
* Databases
* Responsive layout below full width

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
-<header role="Navigation" class="w-100 {{page.hide_navigation}}">
-
-  <div class="w-90 center pv2 cf">
-    <a class="ml2 link dim mid-gray f3" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">
-      <img src="{{site.logo}}" alt="OCCRP" class="h2 fl" />
-      {{ site.title | escape }}
+<nav class="mainNav t-sm t-muted">
+  <div class="wrapper">
+    <a href="{{ "/" | relative_url }}" class="mainNav-logo t4 t-light">
+      <img width="32" height="32" src="https://cdn.occrp.org/common/logo/RedTransparent_globe.png" />
+      <span>{{ site.title | escape }}</span>
     </a>
+    <div>
+    </div>
   </div>
+</nav>
 
-</header>
+
