--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
-<footer class="w-100 bg-silver white pv3">
-  <p class="w-90 center lh-copy f7 tr">
-    Build {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
-    &bull;
-    Hosted on <a href="{{ site.repository_url }}" class="white link dim">GitHub</a>
-  </p>
+<footer>
+  <div class="wrapper pt-3 pb-3 t-sm t-center t-muted">
+    <p>Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull; Hosted on <a href="{{ site.repository_url }}">GitHub</a></p>
+  </div>
 </footer>
