--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,18 +8,8 @@
   <link rel="shortcut icon" href="{{ site.logo }}">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="/assets/css/app.css"/>
 
-  <style>
-    body * { font-family: "Open Sans", sans-serif; }
-    .page a { color: #982022 }
-    .red-id { color: #982022 }
-    .bg-red-id { background-color: #982022 }
-    .b--red-id { border-color: #982022 }
-    .blue-id { color: #374953 }
-    .bg-blue-id { background-color: #374953 }
-    .b--blue-id { border-color: #374953 }
-  </style>
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
