--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,25 @@
 
   {% include head.html %}
 
-  <body class="mid-gray">
+  <body>
+    <script>
+      var ajax = new XMLHttpRequest();
+      ajax.open('GET', '/static/symbols.svg', true);
+      ajax.send();
+      ajax.onload = function(e) {
+        if (this.status === 404) {
+          return;
+        }
+        var div = document.createElement('div');
+        div.innerHTML = ajax.responseText;
+        document.body.insertBefore(div, document.body.childNodes[0]);
+      };
+    </script>
+
 
     {% include header.html %}
 
-    <main aria-label="Content" class="w-100">
+    <main aria-label="Content">
       {{ content }}
     </main>
 
