--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,16 +2,12 @@
 layout: default
 ---
 
-<div class="w-100 bg-red-id pv1">
-  <header class="w-90 center">
-    <h1 class="lh-copy white fw1">{{ page.title }}</h1>
-  </header>
+<div class="sidekick">
+  <div class="wrapper">
+    <h1 class="t2 t-light">{{ page.title }}</h1>
+  </div>
 </div>
 
-<article class="page w-100 mid-gray">
-
-  <div class="w-90 center pv4">
-    {{ content }}
-  </div>
-
-</article>
+<div class="wrapper pt-6 pb-6 copyLight">
+  {{ content }}
+</div>
