Remake databases, other small adjustments;
* Added jekyll-typogrify for titlecase >_>
* Homepage tweaks

Could use better icons in db, would have to add custom ones to octicons.
Also Firefox seems to kill my vibe https://github.com/primer/octicons/issues/151

--- a/_sass/modules/_mainNav.scss
+++ b/_sass/modules/_mainNav.scss
@@ -27,3 +27,10 @@ a.mainNav-logo {
     text-decoration: none;
   }
 }
+
+.mainNav-items {
+  .icon {
+    vertical-align: -3px;
+    margin-left: .25em;
+  }
+}
