--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
       <img width="32" height="32" src="https://cdn.occrp.org/common/logo/RedTransparent_globe.png" />
       <span>{{ site.title | escape }}</span>
     </a>
-    <div>
+    <div class="mainNav-items">
+        <a href="/tickets/new">Research requests<svg class="icon"><use xlink:href="#arrow-right"></use></svg></a>
     </div>
   </div>
 </nav>
