--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,3 +4,22 @@
   margin: 0 auto;
   padding: 0 15px;
 }
+
+
+.l-fixedColumn {
+  width: 100%;
+  @include respond(sm) {
+    display: flex;
+
+    .l-fixedColumn-main {
+      flex: 1 1 auto;
+      min-width: 0;
+    }
+
+    .l-fixedColumn-column {
+      flex: 0 0 auto;
+      width: 300px;
+      padding-right: $spacer-4 * 2;
+    }
+  }
+}
