Remove trailing slashes

--- a/_includes/head-tickets.html
+++ b/_includes/head-tickets.html
@@ -16,8 +16,8 @@
   <meta name="id-frontend/initializers/options/rootLogo" content="https://cdn.occrp.org/common/logo/RedTransparent_globe.png" />
   <meta name="id-frontend/initializers/options/rootURL" content="/" />
   <meta name="id-frontend/initializers/options/loginURL" content="/accounts/login?next=/tickets" />
-  <meta name="id-frontend/initializers/options/logoutURL" content="/accounts/logout/" />
-  <meta name="id-frontend/initializers/options/profileURL" content="/accounts/profile/" />
+  <meta name="id-frontend/initializers/options/logoutURL" content="/accounts/logout" />
+  <meta name="id-frontend/initializers/options/profileURL" content="/accounts/profile" />
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
