--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,5 @@
 ---
-layout: default
+layout: layout
 ---
 
-<div class="sidekick">
-  <div class="wrapper">
-    <h1 class="t2 t-light">{{ page.title }}</h1>
-  </div>
-</div>
-
-<div class="wrapper pt-6 pb-6 copyLight">
-  {{ content }}
-</div>
+{{ content }}
