Move donors to footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,5 +36,24 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 partners">
+                <a href="https://occrp.org/" class="partner">
+                    <img src="/assets/images/logos/occrp_dark.png" alt="OCCRP" height="25"/>
+                </a>
+                <a href="http://en.arij.net/" class="partner">
+                    <img src="/assets/images/logos/arij_dark.png" alt="ARIJ" height="25"/>
+                </a>
+                <a href="https://investigativecenters.org/" class="partner">
+                    <img src="/assets/images/logos/ancir_dark.png" alt="ANCIR" height="25"/>
+                </a>
+                <a href="https://jigsaw.google.com/" class="partner">
+                    <img src="/assets/images/logos/jigsaw_dark.png" alt="Jigsaw" height="25"/>
+                </a>
+                <a href="https://www.opensocietyfoundations.org/" class="partner">
+                    <img src="/assets/images/logos/osf_dark.png" alt="OSF" height="25"/>
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
