Reorder sections on the homepage.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -114,6 +114,7 @@ $grid-gutter-width: 60px;
 .whodis {
   display: flex;
   align-items: center;
+  border-top: 1px solid $gray-300;
 }
 
 .whodis-partners {
