[WIP] Update team & overall layout.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <span>{{ site.title | escape }}</span>
     </a>
     <div class="mainNav-items">
-        <a href="/tickets/new">Research requests<svg class="icon"><use xlink:href="#arrow-right"></use></svg></a>
+        <a href="/tickets/new">Research requests</a>
     </div>
   </div>
 </nav>
