--- a/_layouts/database.html
+++ b/_layouts/database.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="sidekick">
   <div class="wrapper">
-    <h1 class="t2 t-light">Databases: {{ page.subtitle }}</h1>
+    <h1 class="t2 t-normal">Databases: {{ page.subtitle }}</h1>
   </div>
 </div>
 
