--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -20,7 +20,17 @@
 @import "modules/icon";
 
 @import "modules/mainNav";
+@import "modules/grid";
+@import "modules/media";
+@import "modules/hero";
+@import "modules/research";
+@import "modules/face";
+@import "modules/whodis";
+@import "modules/region";
+@import "modules/regionNav";
+@import "modules/source";
 
+// body is gray
 main {
   background: white;
 }
@@ -30,174 +40,12 @@ main {
   color: white;
 }
 
-.hero {
-  background: $gray-900 url('/static/images/splash.png') no-repeat center center;
-  background-size: cover;
+.link-hiddenWhite {
   color: white;
-  padding: $spacer-5 * 2 0;
-}
-
-.sidekick {
-  background: theme-color("primary");
-  color: white;
-  padding: $spacer-5 0 $spacer-4 0;
-}
-
-$grid-gutter-width: 30px;
-$grid-vertical-spacing: 1rem;
-
-.grid {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  margin: ($grid-vertical-spacing * -1) ($grid-gutter-width / -2);
-}
-
-.grid-unit {
-  width: 100%;
-  min-height: 1px; // Prevent collapsing
-  padding: $grid-vertical-spacing ($grid-gutter-width / 2);
-}
-
-.grid--thirds {
-  .grid-unit {
-    flex: 0 0 percentage(1/4);
-    max-width: percentage(1/4);
-  }
-}
-
-
-.grid--regions {
-  .grid-unit {
-    flex: 0 0 percentage(1/3);
-    max-width: percentage(1/3);
-  }
-}
-
-$grid-gutter-width: 60px;
-
-.grid--fourths {
-  margin: ($grid-vertical-spacing * -1) ($grid-gutter-width / -2);
-
-  .grid-unit {
-    flex: 0 0 percentage(1/2);
-    max-width: percentage(1/2);
-    padding: $grid-vertical-spacing ($grid-gutter-width / 2);
-  }
-}
-
-.research {
-  display: flex;
-  align-items: center;
-}
-
-.research-text {
-  margin-bottom: $spacer-6;
-}
-
-.research-team {
-  flex: 0 0 660px;
-  margin-left: 80px;
-}
-
-.face {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  border-radius: 50%;
-  margin: 0 auto;
-  background: white;
-  border: 2px solid white;
-  background-clip: border-box;
-}
-
-.whodis {
-  display: flex;
-  align-items: center;
-  border-top: 1px solid $gray-300;
-}
-
-.whodis-partners {
-  flex: 0 0 460px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-left: 20px;
-}
-
-.partner {
-  display: block;
-  flex: 0 0 auto;
-  padding: 15px 15px;
-
-  img {
-    display: block;
-  }
-}
-
-.region {
-  display: block;
-  padding: $spacer-2 $spacer-3;
-  border: 2px solid $gray-500;
-  border-radius: $border-radius;
-  color: $gray-700;
-  transition: $btn-transition;
-
-  &.is-active {
-    background: theme-color("primary");
-    border-color: theme-color("primary");
-    color: white;
-  }
+  text-decoration: $link-decoration;
 
   &:hover {
-    background: darken(theme-color("primary"), 7.5%);
-    border-color: darken(theme-color("primary"), 7.5%);
     color: white;
-    text-decoration: none;
+    text-decoration: $link-hover-decoration;
   }
-
-}
-
-.regionNav {
-
-}
-
-.regionNav-unit {
-  & + & {
-    margin-top: $spacer-2;
-  }
-}
-
-.source {
-  position: relative;
-  display: block;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: to-rem(7px);
-    left: -15px;
-    display: block;
-    width: 0;
-    height: 0;
-    border: 3px solid $gray-800;
-    border-radius: 50%;
-  }
-
-  & + & {
-    margin-top: $spacer-4;
-  }
-
-  .icon {
-    margin-right: .4em;
-    vertical-align: -2px;
-  }
-}
-
-.source-tags {
-  color: $gray-650;
-}
-
-footer {
-  background: $gray-200;
 }
