--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="sidekick">
   <div class="wrapper">
-    <h1 class="t2 t-normal">{{ page.title }}</h1>
+    <h1 class="t-normal">{{ page.title }}</h1>
   </div>
 </div>
 
