--- a/_sass/modules/_grid.scss
+++ b/_sass/modules/_grid.scss
@@ -1,53 +1,99 @@
-$grid-gutter-width: 30px;
-$grid-vertical-spacing: 1rem;
-
 .grid {
-  width: 100%;
+  min-width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin: ($grid-vertical-spacing * -1) ($grid-gutter-width / -2);
+  margin: -1.5rem -15px;
 }
 
 .grid-unit {
   width: 100%;
   min-height: 1px; // Prevent collapsing
-  padding: $grid-vertical-spacing ($grid-gutter-width / 2);
+  padding: 1.5rem 15px;
 }
 
+
 .grid--thirds {
+  justify-content: center;
+
+  // leaving extra padding on the sides
   .grid-unit {
-    flex: 0 0 percentage(1/4);
-    max-width: percentage(1/4);
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @include respond(sm) {
+    .grid-unit {
+      flex: 0 0 percentage(1/2);
+      max-width: percentage(1/2);
+    }
+  }
+
+  @include respond(lg) {
+    .grid-unit {
+      flex: 0 0 percentage(1/3);
+      max-width: percentage(1/3);
+    }
+  }
+}
+
+
+.grid--fourths {
+  text-align: center;
+
+  // leaving extra padding on the sides
+  .grid-unit {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @include respond(sm) {
+    text-align: left;
+
+    .grid-unit {
+      flex: 0 0 percentage(1/2);
+      max-width: percentage(1/2);
+    }
+  }
+
+  @include respond(lg) {
+    margin-left: 0;
+    margin-right: 0;
+
+    .grid-unit {
+      flex: 0 0 percentage(1/4);
+      max-width: percentage(1/4);
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 }
 
 
 .grid--regions {
+  margin-top: -.5rem;
+  margin-bottom: -.5rem;
+
   .grid-unit {
-    flex: 0 0 percentage(1/3);
-    max-width: percentage(1/3);
+    padding-top: .5rem;
+    padding-bottom: .5rem;
   }
-}
 
-$grid-gutter-width: 60px;
+  @include respond(sm) {
+    margin-top: -1rem;
+    margin-bottom: -1rem;
 
-.grid--fourths {
-  justify-content: center;
-  margin: ($grid-vertical-spacing * -1) ($grid-gutter-width / -2);
-
-  .grid-unit {
-    flex: 0 0 percentage(1/3);
-    max-width: percentage(1/3);
-    padding: $grid-vertical-spacing ($grid-gutter-width / 2);
+    .grid-unit {
+      flex: 0 0 percentage(1/2);
+      max-width: percentage(1/2);
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
   }
-}
 
-.grid--split {
-  margin: ($grid-vertical-spacing * -1) ($grid-gutter-width / -2);
-
-  .grid-unit {
-    flex: 0 0 percentage(1/2);
-    max-width: percentage(1/2);
-    padding: $grid-vertical-spacing ($grid-gutter-width / 2);
+  @include respond(md) {
+    .grid-unit {
+      flex: 0 0 percentage(1/3);
+      max-width: percentage(1/3);
+    }
   }
 }
