--- a/_sass/modules/_grid.scss
+++ b/_sass/modules/_grid.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: -1.5rem -15px;
+  justify-content: center;
 }
 
 .grid-unit {
@@ -13,7 +14,6 @@
 
 
 .grid--thirds {
-  justify-content: center;
 
   // leaving extra padding on the sides
   .grid-unit {
@@ -37,7 +37,7 @@
 }
 
 
-.grid--fourths {
+.grid--extra {
   text-align: center;
 
   // leaving extra padding on the sides
@@ -47,8 +47,6 @@
   }
 
   @include respond(sm) {
-    text-align: left;
-
     .grid-unit {
       flex: 0 0 percentage(1/2);
       max-width: percentage(1/2);
@@ -56,14 +54,10 @@
   }
 
   @include respond(lg) {
-    margin-left: 0;
-    margin-right: 0;
 
     .grid-unit {
-      flex: 0 0 percentage(1/4);
-      max-width: percentage(1/4);
-      padding-left: 15px;
-      padding-right: 15px;
+      flex: 0 0 percentage(1/3);
+      max-width: percentage(1/3);
     }
   }
 }
