Updated content to relfect the new policy.

--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,8 +1,8 @@
 <div class="wrapper pt-3 pb-3 t-sm t-center t-primary">
   <p>
-    <strong>Notice</strong>: Investigative Dashboard will be working with
-    decreased capacity until the end of this year. Please feel free to follow
-    up on the progress of your investigation using comments. Researchers will
-    make every effort to meet your deadlines.
+    <strong>Important Changes to Investigative Dashboard</strong>: as of March
+    1, 2020 ID will primarily serve OCCRP’s member centers and network.
+    <br/>
+    We will no longer be able to respond to external research requests.
   </p>
 </div>
