--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="{{ site.logo }}">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic">
-  <link rel="stylesheet" href="/assets/css/app.css"/>
+  <link rel="stylesheet" href="/static/id.css"/>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
