--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,8 +1,10 @@
-<div class="wrapper pt-3 pb-3 t-sm t-center t-primary">
-  <p>
-    <strong>Important Changes to Investigative Dashboard</strong>: as of March
-    1, 2020 ID will primarily serve OCCRP’s member centers and network.
-    <br/>
-    We will no longer be able to respond to external research requests.
-  </p>
+<div class="bb">
+  <div class="mw8 center">
+    <p class="tc lh-copy">
+      <strong>Important Changes to Investigative Dashboard</strong>: as of March
+      1, 2020 ID will primarily serve OCCRP’s member centers and network.
+      <br/>
+      We will no longer be able to respond to external research requests.
+    </p>
+  </div>
 </div>
