--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="sans-serif open-sans mid-gray">
     <script>
       var ajax = new XMLHttpRequest();
       ajax.open('GET', '/static/symbols.svg', true);
