--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 
-<div class="sidekick">
-  <div class="wrapper">
-    <h1 class="t-normal">{{ page.title }}</h1>
-  </div>
+<div>
+  <h1>{{ page.title }}</h1>
 </div>
 
-<div class="wrapper pt-6 pb-6 copyLight">
+<div class="">
   {{ content }}
 </div>
