--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <footer>
-  <div class="wrapper pt-3 pb-3 t-sm t-center t-muted">
-    <p>Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull; Hosted on <a href="{{ site.repository_url }}">GitHub</a></p>
+  <div class="mw8 center mt4 tr">
+    <small class="gray pv4">
+      Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull; Hosted on
+      <a class="gray dim" href="{{ site.repository_url }}">GitHub</a>
+    </small>
   </div>
 </footer>
