Added the new databases.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer>
   <div class="mw8 center mt4 tr">
     <small class="gray pv4">
-      Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull; Hosted on
-      <a class="gray dim" href="{{ site.repository_url }}">GitHub</a>
+      Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull;
+      Source available on
+      <a class="gray dim" href="{{ site.repository_url }}">Gitlab</a>
     </small>
   </div>
 </footer>
