--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div>
+<div class="center mw8 pv3">
   <h1>{{ page.title }}</h1>
 </div>
 
-<div class="">
+<div class="center mw8">
   {{ content }}
 </div>
