Updated the layout and the main page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,14 @@
 <footer>
-  <div class="mw8 center mt4 tr">
-    <small class="gray pv4">
-      Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }} &bull;
+  <div class="mw8 center mt4 tr bt bw3 b--near-white">
+    <p class="gray pv4 lh-copy">
       Source available on
-      <a class="gray dim" href="{{ site.repository_url }}">Gitlab</a>
-    </small>
+      <a class="gray dim" href="{{ site.repository_url }}">Gitlab</a>,
+      backgroun pattern by
+      <a class="gray dim" href="https://www.marcbanderson.com">Marc Anderson</a>.
+
+      <small class="db moon-gray pt2">
+        Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
+      </small>
+    </p>
   </div>
 </footer>
