Updated about page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="center mw8 pv2">
     <a class="link normal gray f3 flex items-center" href="/">
       <img class="mw2" src="/static/svg/id.svg">
-      <span class="ph2">Investigative Dashboard</span>
+      <span class="ph2">ID</span>
     </a>
   </div>
 </div>
