--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div class="center mw8 pv3">
-  <h1>{{ page.title }}</h1>
+  <h1 class="normal ttu tracked">{{ page.title }}</h1>
 </div>
 
-<div class="center mw8">
+<div class="center mw8 lh-copy">
   {{ content }}
 </div>
