Updated home and the about pages.

--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,4 +1,4 @@
-<div class="bb">
+<div class="bb b--moon-gray">
   <div class="mw8 center">
     <p class="tc lh-copy">
       <strong>Important Changes to Investigative Dashboard</strong>: as of March
