--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
 <footer>
-  <div class="mw8 center mt4 tr bt bw3 b--near-white">
-    <p class="gray pv4 lh-copy">
+  <div class="mw8 center tr bt b--moon-gray">
+    <p class="silver pv4 lh-copy f6">
       Source available on
-      <a class="gray dim" href="{{ site.repository_url }}">Gitlab</a>,
+      <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
       backgroun pattern by
-      <a class="gray dim" href="https://www.marcbanderson.com">Marc Anderson</a>.
+      <a class="silver dim" href="https://unsplash.com/photos/WqPAETBU2G8">
+        Sharon McCutcheon</a>.
 
       <small class="db moon-gray pt2">
         Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
