--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
-<div class="bb b--near-white">
-  <div class="center mw8 pv2">
-    <a class="link normal gray f3 flex items-center" href="/">
-      <img class="mw2" src="/static/svg/id.svg">
-      <span class="ph2">ID</span>
-    </a>
-  </div>
+<div class="center mw8 pv2">
+  <a class="link normal gray f3 flex items-center" href="/">
+    <img class="mw2" src="/static/svg/logo-grayscale.svg">
+    <span class="ph2">OCCRP ID</span>
+  </a>
 </div>
