--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 
-<div class="center mw8 pv3">
-  <h1 class="normal ttu tracked">{{ page.title }}</h1>
+<div class="bg--pattern bg-black bg-center cover white">
+  <div class="center mw8 pv3">
+    <h1 class="normal ttu tracked">{{ page.title }}</h1>
+  </div>
 </div>
 
-<div class="center mw8 lh-copy">
+<div class="center mw8 lh-copy pt3 pb5">
   {{ content }}
 </div>
