Updated the OCCRP related links/copy.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <p class="silver pv4 lh-copy f6">
       Source available on
       <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
-      backgroun pattern by
+      backgroun photo by
       <a class="silver dim" href="https://unsplash.com/photos/WqPAETBU2G8">
         Sharon McCutcheon</a>.
 
