--- a/_includes/head-tickets.html
+++ b/_includes/head-tickets.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="/frontend/assets/vendor.css"/>
   <link rel="stylesheet" href="/frontend/assets/id.css"/>
 
-  <meta name="id-frontend/initializers/options/rootName" content="Investigative Dashboard" />
-  <meta name="id-frontend/initializers/options/rootLogo" content="https://cdn.occrp.org/common/logo/RedTransparent_globe.png" />
+  <meta name="id-frontend/initializers/options/rootName" content="OCCRP ID" />
+  <meta name="id-frontend/initializers/options/rootLogo" content="https://investigativedashboard.org/static/svg/logo-grayscale.svg" />
   <meta name="id-frontend/initializers/options/rootURL" content="/" />
   <meta name="id-frontend/initializers/options/loginURL" content="/accounts/login?next=/tickets" />
   <meta name="id-frontend/initializers/options/logoutURL" content="/accounts/logout" />
