--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,20 @@
 <footer>
-  <div class="mw8 center tr bt b--moon-gray">
-    <p class="silver pv4 lh-copy f6">
-      Source available on
-      <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
-      backgroun photo by
-      <a class="silver dim" href="https://unsplash.com/photos/WqPAETBU2G8">
-        Sharon McCutcheon</a>.
+  <div class="mw8 center bt b--moon-gray flex">
+    <div class="w-40 pt4">
+      <img class="w-80 o-80" src="/static/svg/logo-extended-grayscale.svg" alt="Organized Crime and Corruption Reporting Project" />
+    </div>
+    <div class="w-60 tr">
+      <p class="silver pv4 lh-copy f6">
+        Source available on
+        <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
+        backgroun photo by
+        <a class="silver dim" href="https://unsplash.com/photos/WqPAETBU2G8">
+          Sharon McCutcheon</a>.
 
-      <small class="db moon-gray pt2">
-        Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
-      </small>
-    </p>
+        <small class="db moon-gray pt2">
+          Updated {{ site.time | date: "%Y-%m-%d %H:%M:%S" }}
+        </small>
+      </p>
+    </div>
   </div>
 </footer>
