--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer>
   <div class="mw8 center bt b--moon-gray flex">
     <div class="w-40 pt4">
-      <img class="w-80 o-80" src="/static/svg/logo-extended-grayscale.svg" alt="Organized Crime and Corruption Reporting Project" />
+      <a class="link dim" href="https://www.occrp.org/en/about-us">
+        <img class="w-80 o-80" src="/static/svg/logo-extended-grayscale.svg" alt="Organized Crime and Corruption Reporting Project" />
+      </a>
     </div>
     <div class="w-60 tr">
       <p class="silver pv4 lh-copy f6">
