Added new logo.

--- a/_includes/head-tickets.html
+++ b/_includes/head-tickets.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="/frontend/assets/vendor.css"/>
   <link rel="stylesheet" href="/frontend/assets/id.css"/>
 
-  <meta name="id-frontend/initializers/options/rootName" content="OCCRP ID" />
+  <meta name="id-frontend/initializers/options/rootNameShow" content="" />
+  <meta name="id-frontend/initializers/options/rootName" content="" />
   <meta name="id-frontend/initializers/options/rootLogo" content="https://investigativedashboard.org/static/svg/logo-grayscale.svg" />
   <meta name="id-frontend/initializers/options/rootURL" content="/" />
   <meta name="id-frontend/initializers/options/loginURL" content="/accounts/login?next=/tickets" />
