--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <div class="center mw8 pv2">
   <a class="link normal gray f3 flex items-center" href="/">
-    <img class="mw2" src="/static/svg/logo-grayscale.svg">
-    <span class="ph2">OCCRP ID</span>
+    <img class="h2" src="/static/svg/logo-id-grayscale.svg">
   </a>
 </div>
