--- a/_includes/head-tickets.html
+++ b/_includes/head-tickets.html
@@ -14,7 +14,7 @@
 
   <meta name="id-frontend/initializers/options/rootNameShow" content="" />
   <meta name="id-frontend/initializers/options/rootName" content="" />
-  <meta name="id-frontend/initializers/options/rootLogo" content="https://investigativedashboard.org/static/svg/logo-id-grayscale.svg" />
+  <meta name="id-frontend/initializers/options/rootLogo" content="/static/svg/logo-id-grayscale.svg" />
   <meta name="id-frontend/initializers/options/rootURL" content="/" />
   <meta name="id-frontend/initializers/options/loginURL" content="/accounts/login?next=/tickets" />
   <meta name="id-frontend/initializers/options/logoutURL" content="/accounts/logout" />
